# Mozzoh

./: .gitmodules  CMakeLists.txt  HLIBConfig.h.in  build.sh  configure.sh  main.c  main.cpp  my-first-repository.kdev4  readme.md  run.sh
Adder/: CMakeLists.txt  adder.c  adder.cpp
